# esp-camera-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  PLAN.md  README.md  TODO.md
components/cam_pipeline_entropy/: CMakeLists.txt  Kconfig
components/cam_pipeline_entropy/include/: cam_pipeline_entropy.h
components/cam_pipeline_entropy/src/: cam_pipeline_entropy.c
components/cam_pipeline_qr/: CMakeLists.txt  Kconfig
components/cam_pipeline_qr/include/: cam_pipeline_qr.h
components/cam_pipeline_qr/src/: cam_pipeline_qr.c
components/k_quirc/: CMakeLists.txt  Kconfig
components/k_quirc/include/: k_quirc.h
components/k_quirc/src/: k_quirc_identify.c  k_quirc_internal.h
docs/: spec-ppa-scaling.md  spec-qr-decode-benchmark.md
docs/knowledge/: consumer-psram-contention-vs-display.md
include/: cam_pipeline_camera_driver.h  cam_pipeline_display_driver.h  esp_cam_pipeline.h
src/: esp_cam_pipeline.c  esp_cam_pipeline_internal.h  qr_decode.c  qr_decode.h  rgb565_lut.c  rgb565_lut.h
